<resources>
    <string name="app_name">Weatherly</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="image_contentDescription">image</string>
    <string name="miles_per_hour">miles/hour</string>
    <string name="action_refresh">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- air quality string -->
    <string name="air_quality_index_one_text">Good</string>
    <string name="air_quality_index_one_desc">Air quality is excellent, perfect for outdoor activities.</string>
    <string name="air_quality_index_two_desc">Air quality is good; sensitive individuals may feel mild effects.</string>
    <string name="air_quality_index_two_text">Fair</string>
    <string name="air_quality_index_three_desc">Moderate air quality; those with respiratory issues should take caution.</string>
    <string name="air_quality_index_three_text">Moderate</string>
    <string name="air_quality_index_four_desc">Air may be unhealthy; limit time spent outdoors.</string>
    <string name="air_quality_index_four_text">Poor</string>
    <string name="air_quality_index_five_desc">Very poor air quality; avoid going outside if possible.</string>
    <string name="air_quality_index_five_text">Very Poor</string>

    <!-- fragments string -->
    <string name="rain_change_txt">Rain Change</string>
    <string name="wind_speed_txt">Wind Speed</string>
    <string name="humidity_txt">Humidity</string>
    <string name="uv_index_txt">UV Index</string>
    <string name="hourly_forecast_txt">Hourly Forecast</string>
    <string name="air_forecast_txt">Air Forecast</string>
    <string name="sunrise_txt">Sunrise</string>
    <string name="sunset_txt">Sunset</string>

    <!-- Main Activity string -->
    <string name="feels_like_txt">Feels like</string>
    <string name="today_txt">Today</string>
    <string name="tomorrow_txt">Tomorrow</string>
    <string name="btn_one_week_txt">1 Week</string>
    <string name="today">Today</string>
    <string name="kmh">km/h</string>

    <!-- Weather Description String -->
    <string name="weather_clear">Clear sky</string>
    <string name="weather_mainly_clear">Partially clear</string>
    <string name="weather_partly_cloudy">Partly cloudy</string>
    <string name="weather_cloudy">Overcast</string>
    <string name="weather_fog">Foggy</string>
    <string name="weather_light_rain">Light rain</string>
    <string name="weather_moderate_rain">Moderate rain</string>
    <string name="weather_heavy_rain">Heavy rain</string>
    <string name="weather_light_freezing_rain">Light freezing rain</string>
    <string name="weather_moderate_freezing_rain">Moderate freezing rain</string>
    <string name="weather_freezing_rain">Freezing rain</string>
    <string name="weather_light_snow">Light snow</string>
    <string name="weather_moderate_snow">Moderate snow</string>
    <string name="weather_heavy_snow">Heavy snow</string>
    <string name="weather_snow_grains">Snow grains</string>
    <string name="weather_unknown">Unknown weather</string>
    <string name="carbonMonoxide">Carbon Monoxide</string>
    <string name="pm10_txt">Dust Particles</string>
    <string name="ozone_txt">Ozone</string>
    <string name="aqi_txt">AQI</string>
    <string name="night_txt">Night</string>
    <string name="day_txt">Day</string>
    <string name="daytime_weekly">Daytime (Weekly Avg.)</string>
    <string name="nighttime_weekly">Nighttime (Weekly Avg.)</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="intro_onboarding_txt">Stay informed about real-time weather conditions, no matter where you are.
Be prepared for severe weather in advance and plan your day with confidence.
Start setting up your personal weather assistant in just 4 simple steps.</string>
    <string name="intro_title">Welcome to Weatherly</string>
    <string name="get_started_btn_txt">Get Started</string>
    <string name="location_title">Get Real-Time Forecasts Wherever You Are</string>
    <string name="location_desc">By allowing location access, you’ll receive accurate, location-based weather forecasts.Be prepared for sudden rain, strong winds, or heatwaves before they hit.Granting location access is entirely up to you — and if you change your mind, you can always update your settings later.</string>
    <string name="notification_title">Don’t Let the Weather Catch You Off Guard!</string>
    <string name="notification_desc">Enable notifications to get timely alerts about sudden weather changes.\nWe’ll let you know if storms, rain, or heatwaves are coming your way.\n\nDon’t worry — you can always change this later in your app settings.</string>
    <string name="welcome_to_txt">WELCOME TO</string>
    <string name="splash_screen_subtext">Take your umbrella before the rain starts</string>
    <string name="oneWeek_mostly">Mostly</string>
    <string name="oneWeek_occasionally">occasionally</string>
    <string name="oneWeek_forecasted_week">is forecasted for the upcoming week.</string>
    <string name="feels_like_temp_txt">"Feels like temperature: "</string>
    <string name="sunrise_and_sunset_txt">Sundial</string>
    <string name="daily_weather">Daily Weather</string>
    <string name="no_weather_txt">No weather data found</string>
    <string name="required_permission_toast">Location permission is required to proceed</string>
    <string name="weather_light_drizzle">Light drizzle</string>
    <string name="weather_moderate_drizzle">Moderate drizzle</string>
    <string name="weather_dense_drizzle">Dense drizzle</string>
    <string name="weather_light_rain_showers">Light rain showers</string>
    <string name="weather_moderate_rain_showers">Moderate rain showers</string>
    <string name="weather_heavy_rain_showers">Heavy rain showers</string>
    <string name="weather_light_snow_showers">Light snow showers</string>
    <string name="weather_heavy_snow_showers">Heavy snow showers</string>
    <string name="weather_thunderstorm">Thunderstorm</string>
    <string name="weather_thunderstorm_slight_hail">Thunderstorm with slight hail</string>
    <string name="weather_thunderstorm_heavy_hail">Thunderstorm with heavy hail</string>


</resources>