<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.onboarding.IntroOnboardingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/onboarding_background_color"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/onboardingImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_welcom_weatherly" />

        <com.madkit.weatherapp.views.customTextViewFont.InterBoldTextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_title"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"/>

        <com.madkit.weatherapp.views.customTextViewFont.InterTextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/intro_onboarding_txt"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/medium_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started_btn_txt"
            android:textColor="@color/item_text_color"
            android:layout_marginHorizontal="@dimen/margin_small"
            app:cornerRadius="@dimen/card_radius_xsmall"
            app:backgroundTint="@color/onboarding_button_background_color"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/medium_large_text_size"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:padding="@dimen/padding_small" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>