<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.onboarding.LocationOnboardingFragment"
    android:background="@color/onboarding_background_color"
    android:gravity="center_horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/onboardingImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/onboarding_image_height"
        android:src="@drawable/ic_weather_location"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedLocationImage" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_title"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
       android:fontFamily="@font/inter_bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/onboardingImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_medium" />


    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_margin="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="@dimen/oboarding_next_button_height"
        android:layout_height="@dimen/oboarding_next_button_height"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:background="@drawable/btn_circle_yellow"
        android:src="@drawable/ic_arrow_right"
        android:tint="@color/item_text_color"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>