<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5B3FB4"
    android:gravity="center_horizontal"
    tools:context=".views.onboarding.NotificationOnboardingFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/onboardingImageContainer"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#D6B4F2"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:shapeAppearanceOverlay="@style/roundedNotificationCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToOutline="true">

            <ImageView
                android:id="@+id/onboardingImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_push_natification"
                android:background="@null"
                android:adjustViewBounds="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notification_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardingImageContainer" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/notification_desc"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_circle_yellow"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_arrow_right"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>