<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6EEFF"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="#D0BCFF"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/appBarBackground"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/header_background"
                app:layout_collapseMode="parallax"
                app:shapeAppearanceOverlay="@style/AppBarRoundedBottomCorners" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                app:layout_collapseMode="parallax">


                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_search" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvDayText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/day_txt"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvDayTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:paddingLeft="5dp"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            tools:text="3°" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvNightText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/night_txt"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvNightTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:paddingLeft="5dp"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            tools:text="-1°" />
                    </LinearLayout>


                </LinearLayout>


                <TextView
                    android:id="@+id/dateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    tools:text="Nisan 07, 15:35" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:title="">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    app:layout_collapseMode="parallax">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="Beykoz, TR"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvName"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter_bold"
                        android:textColor="@android:color/white"
                        android:textSize="64sp"
                        tools:text="3°" />

                    <TextView
                        android:id="@+id/tvFeelsLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvTemp"
                        android:layout_alignStart="@id/tvTemp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/inter"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        tools:text="Feels Like 2°" />

                    <LinearLayout
                        android:id="@+id/weatherInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/tvFeelsLike"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivMain"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            tools:src="@drawable/ic_clear_day" />

                        <TextView
                            android:id="@+id/tvMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:autoSizeMaxTextSize="15sp"
                            android:autoSizeMinTextSize="10sp"
                            android:autoSizeStepGranularity="1sp"
                            android:autoSizeTextType="uniform"
                            android:fontFamily="@font/inter"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="Cloud" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:id="@+id/weatherTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6EEFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_collapseMode="pin">

            <Button
                android:id="@+id/btnToday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#E1B6FF"
                android:text="@string/today_txt"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnTomorrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/tomorrow_txt"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn1Week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/btn_one_week_txt"
                android:textColor="#000000" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:navGraph="@navigation/nav_graph" />
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>